VO-1457 Remove max-height attribute from modal-body to prevent IE10 scrollbar weirdness

--- a/app/styles/common/_modals.scss
+++ b/app/styles/common/_modals.scss
@@ -75,6 +75,10 @@
   }
 }
 
+.modal.request-credit-increase .modal-body {
+  max-height: none;
+}
+
 .modal.search-modal {
   width: 720px;
   margin-left: -360px;
